src/tests/testfiles/variable-declarations/7.txt
Error at 2:5: Variable 'a' used before it was declared
a;
^
